--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing page</title>
-    <link rel="stylesheet" href="./themes/index.css" />
+    <link rel="stylesheet" href="/themes/index.css" />
   </head>
   <body>
     <div class="banner">
