--- a/src/selflanding.html
+++ b/src/selflanding.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INDEX</title>
-    <link rel="stylesheet" href="./Themes/selflandin.css">
+    <link rel="stylesheet" href="./themes/selflandin.css">
 </head>
 <body>
     <div class="main">
