--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Landing page</title>
+    <title>INDEX</title>
     <link rel="stylesheet" href="./themes/index.css" />
   </head>
   <body>
@@ -19,7 +19,9 @@
               ABOUT-ME
             </a>
           </li>
-          <li><a href="file:///D:/HTMLRepo/src/selflanding.html">INDEX</a></li>
+          <li>
+            <a href="file:///D:/HTMLRepo/src/selflanding.html">my projects</a>
+          </li>
         </ul>
       </div>
       <div class="head">
