--- a/src/about-me.html
+++ b/src/about-me.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./Themes/about-me.css" />
+    <link rel="stylesheet" href="./themes/about-me.css" />
   </head>
   <body>
     <div class="banner">
