--- a/src/selflanding.html
+++ b/src/selflanding.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>INDEX</title>
+    <title>selflanding</title>
     <link rel="stylesheet" href="./themes/selflandin.css">
 </head>
 <body>
@@ -326,7 +326,7 @@
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/selflandin.css">selfpage css</a>
+            <a href="../src/themes/selflandin.css">selfpage css</a>
             <div><a href="../src/selflanding.html">selfpage html</a></div>
             </div>
         <div class="table-cell">
