--- a/about-me.html
+++ b/about-me.html
@@ -12,7 +12,7 @@
       <div class="flex">
         <div>
           <img
-            src=".././images/abtme2.jpg"
+            src="./images/abtme.jpg"
             alt="computer"
             width="200"
             height="200"
