--- a/selflanding.html
+++ b/selflanding.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>selflanding</title>
-    <link rel="stylesheet" href="./themes/selflandin.css">
+    <link rel="stylesheet" href="./themes/selflanding.css">
 </head>
 <body>
     <div class="main">
@@ -25,64 +25,64 @@
         </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/a.html">a</a>
+            <a href="./src/a.html">a</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/animation.css">animation css</a>
-            <div> <a href="../src/csslessons.html/animation.html">animation html</a></div>
+            <a href="./src/csslessons.html/animation.css">animation css</a>
+            <div> <a href="./src/csslessons.html/animation.html">animation html</a></div>
         </div> <div class="table-cell last-cell">
             <a href="https://js-basic-lessons-fawn.vercel.app/src/tip-calculator-app-main/tip%20calculator.html">tip calculator html</a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/pagea.html">pagea</a>
+            <a href="./src/pagea.html">pagea</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/background.css">background css</a>
-            <div>  <a href="../src/csslessons.html/animation.css">background html</a></div>
+            <a href="./src/csslessons.html/background.css">background css</a>
+            <div>  <a href="./src/csslessons.html/animation.css">background html</a></div>
         </div> <div class="table-cell last-cell">
             <a href="https://js-basic-lessons-fawn.vercel.app/src/tip-calculator-app-main/tip%20calculator.css">tip calculator css</a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/login.html">login</a>
+            <a href="./src/login.html">login</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/Boxmodel.css">Boxmodel css</a>
-            <div><a href="../src/csslessons.html/Boxmodel.css">Boxmodel css</a></div>
+            <a href="./src/csslessons.html/Boxmodel.css">Boxmodel css</a>
+            <div><a href="./src/csslessons.html/Boxmodel.css">Boxmodel css</a></div>
         </div> <div class="table-cell last-cell">
             <a href="https://js-basic-lessons-fawn.vercel.app/src/tip-calculator-app-main/tip%20calculator.js">tip calculator js</a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/pagec.html">pagec</a>
+            <a href="./src/pagec.html">pagec</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/formating.css">formating css</a>
-            <div><a href="../src/csslessons.html/formating.html">formating html</a></div>
+            <a href="./src/csslessons.html/formating.css">formating css</a>
+            <div><a href="./src/csslessons.html/formating.html">formating html</a></div>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/paged.html">paged</a>
+            <a href="./src/paged.html">paged</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/link.html">link</a>
+            <a href="./src/csslessons.html/link.html">link</a>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/pagee.html">pagee</a>
+            <a href="./src/pagee.html">pagee</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/link2.html">link2</a>
+            <a href="./src/csslessons.html/link2.html">link2</a>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
@@ -193,8 +193,8 @@
             <a href="../src/input type2.html">sinput type2</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/qr-code-component-main/Themes/QR code.css">QRcode css</a>
-            <div><a href="../challenges/qr-code-component-main/QR code.html">QRcode html</a></div>
+            <a href="./challenges/qr-code-component-main/Themes/QR code.css">QRcode css</a>
+            <div><a href="./challenges/qr-code-component-main/QR code.html">QRcode html</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
