--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
         <img src="./images/java.png" class="logo" />
         <ul>
           <li>
-            <a href="https://html-lessons-mu.vercel.app/src/about-me.html">
-              ABOUT-ME
-            </a>
+            <a href="./about-me.html"> ABOUT-ME </a>
           </li>
           <li>
-            <a href="file:///D:/HTMLRepo/src/selflanding.html">my projects</a>
+            <a href="./selflanding.html">MY PROJECT</a>
           </li>
         </ul>
       </div>
