--- a/selflanding.html
+++ b/selflanding.html
@@ -89,108 +89,108 @@
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/pagef.html">pagef</a>
+            <a href="./src/pagef.html">pagef</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/page1.html">page1</a>
+            <a href="./src/csslessons.html/page1.html">page1</a>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/pageg.html">pageg</a>
+            <a href="./src/pageg.html">pageg</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/page2.html">page2</a>
+            <a href="./src/csslessons.html/page2.html">page2</a>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/pageh.html">pageh</a>
+            <a href="./src/pageh.html">pageh</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/page3.html">page3</a>
+            <a href="./src/csslessons.html/page3.html">page3</a>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/pagei.html">pagei</a>
+            <a href="./src/pagei.html">pagei</a>
        </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/page4.html">page4</a>
+            <a href="./src/csslessons.html/page4.html">page4</a>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/Tribute.html">Tribute</a>
+            <a href="./src/Tribute.html">Tribute</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/page5.html">page5</a>
+            <a href="./src/csslessons.html/page5.html">page5</a>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/survey.html">survey</a>
+            <a href="./src/survey.html">survey</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/paragraph.html">paragraph</a>
+            <a href="./src/csslessons.html/paragraph.html">paragraph</a>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/anchor.html">anchor</a>
+            <a href="./src/anchor.html">anchor</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/psedo.css">psedo css</a>
+            <a href="./src/csslessons.html/psedo.css">psedo css</a>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/child-frame.html">child-frame</a>
+            <a href="./src/child-frame.html">child-frame</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/psedoelements.html">psedoelements</a>
+            <a href="./src/csslessons.html/psedoelements.html">psedoelements</a>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/grand-child-frame.html">grand-child-frame</a>
+            <a href="./src/grand-child-frame.html">grand-child-frame</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/selectorbyname.html">selectorbname</a>
+            <a href="./src/csslessons.html/selectorbyname.html">selectorbname</a>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/input type 3.html">input type3</a>
+            <a href="./src/input type 3.html">input type3</a>
         </div>
         <div class="table-cell">
-            <a href="../src/csslessons.html/animation.css">animation css</a>
-            <div> <a href="../src/csslessons.html/animation.html">animation html</a></div>
+            <a href="./src/csslessons.html/animation.css">animation css</a>
+            <div> <a href="./src/csslessons.html/animation.html">animation html</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/input type2.html">sinput type2</a>
+            <a href="./src/input type2.html">sinput type2</a>
         </div>
         <div class="table-cell">
             <a href="./challenges/qr-code-component-main/Themes/QR code.css">QRcode css</a>
@@ -201,44 +201,44 @@
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/Input Types.html">input Types</a>
+            <a href="./src/Input Types.html">input Types</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/order-summary-component-main/order-summary.html">Order-summary html</a>
-            <div><a href="../challenges/order-summary-component-main/themes/Order-summary.css">Order-summary css</a></div>
+            <a href="./challenges/order-summary-component-main/order-summary.html">Order-summary html</a>
+            <div><a href="./challenges/order-summary-component-main/themes/Order-summary.css">Order-summary css</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/link_a_target.html">link_a_target</a>
+            <a href="./src/link_a_target.html">link_a_target</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/testimonials-grid-section-main/themes/Tm-grid.css">Tm-grid css</a>
-           <div> <a href="../challenges/testimonials-grid-section-main/Tm-grid.html">Tm-grid html</a></div>
+            <a href="./challenges/testimonials-grid-section-main/themes/Tm-grid.css">Tm-grid css</a>
+           <div> <a href="./challenges/testimonials-grid-section-main/Tm-grid.html">Tm-grid html</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/linkb_parent.html">linkb_parent</a>
+            <a href="./src/linkb_parent.html">linkb_parent</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/profile-card-component-main/themes/profile-card.css">profile css</a>
-            <div> <a href="../challenges/profile-card-component-main/profile-card.html">profile html</a></div>
+            <a href="./challenges/profile-card-component-main/themes/profile-card.css">profile css</a>
+            <div> <a href="./challenges/profile-card-component-main/profile-card.html">profile html</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/input type4.html">input type4</a>
+            <a href="./src/input type4.html">input type4</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/fylo-data-storage-component-master/fylo.html">fylo html</a>
-            <div><a href="../challenges/fylo-data-storage-component-master/themes/fylo.css">fylo css</a>
+            <a href="./challenges/fylo-data-storage-component-master/fylo.html">fylo html</a>
+            <div><a href="./challenges/fylo-data-storage-component-master/themes/fylo.css">fylo css</a>
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -246,33 +246,33 @@
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/input type5.html">input type5</a>
+            <a href="./src/input type5.html">input type5</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/3-column-preview-card-component-main/3-column-preview.html">3-column-preview  html</a>
-            <div><a href="../challenges/3-column-preview-card-component-main/themes/3-column-preview.css">3-column-preview css</a></div>
+            <a href="./challenges/3-column-preview-card-component-main/3-column-preview.html">3-column-preview  html</a>
+            <div><a href="./challenges/3-column-preview-card-component-main/themes/3-column-preview.css">3-column-preview css</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
      <div class="table-row">
         <div class="table-cell">
-            <a href="../src/Adidas boots.html">adidas boots</a>
+            <a href="./src/Adidas boots.html">adidas boots</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/nft-preview-card-component-main/NFT.html">nft html</a>
-            <div>  <a href="../challenges/nft-preview-card-component-main/themes/NFT.css">nft css</a></div> 
+            <a href="./challenges/nft-preview-card-component-main/NFT.html">nft html</a>
+            <div>  <a href="./challenges/nft-preview-card-component-main/themes/NFT.css">nft css</a></div> 
             </div><div class="table-cell last-cell">
                 <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/localstore.html">localstore</a>
+            <a href="./src/localstore.html">localstore</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/stats-preview-card-component-main/sts-card.html">status-preview html</a>
-            <div><a href="../challenges/stats-preview-card-component-main/themes/sts-card.css">status-preview css</a>
+            <a href="./challenges/stats-preview-card-component-main/sts-card.html">status-preview html</a>
+            <div><a href="./challenges/stats-preview-card-component-main/themes/sts-card.css">status-preview css</a>
             </div> 
             </div><div class="table-cell last-cell">
                 <a href=""></a>
@@ -280,11 +280,11 @@
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/DOM.html">Dom</a>
+            <a href="./src/DOM.html">Dom</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/clipboard-landing-page-master/clipboard.html">clipboard.html</a>
-            <div> <a href="../challenges/clipboard-landing-page-master/themes/clipboard.css">clipboard css</a>
+            <a href="./challenges/clipboard-landing-page-master/clipboard.html">clipboard.html</a>
+            <div> <a href="./challenges/clipboard-landing-page-master/themes/clipboard.css">clipboard css</a>
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -292,11 +292,11 @@
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/read only.html">read only</a>
+            <a href="./src/read only.html">read only</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/four-card-feature-section-master/four-card.html">four-card html</a>
-            <div><a href="../challenges/four-card-feature-section-master/themes/four-card.css">four-card css</a>
+            <a href="./challenges/four-card-feature-section-master/four-card.html">four-card html</a>
+            <div><a href="./challenges/four-card-feature-section-master/themes/four-card.css">four-card css</a>
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -304,34 +304,34 @@
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/about-me.html">about-me.html</a>
+            <a href="./about-me.html">about-me.html</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/social-proof-section-master/social-proof.html">social-proof html</a>
-            <div><a href="../challenges/social-proof-section-master/themes/social-proof.css">social-proof css</a></div>
+            <a href="./challenges/social-proof-section-master/social-proof.html">social-proof html</a>
+            <div><a href="./challenges/social-proof-section-master/themes/social-proof.css">social-proof css</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/about-me.css">about-me css</a>
+            <a href="./themes/about-me.css">about-me css</a>
         </div>
         <div class="table-cell">
-            <a href="../challenges/single-price-grid-component-master/single-price.html">single-price html</a>
-            <div><a href="../challenges/single-price-grid-component-master/themes/single-price.css">single-price css</a></div>
+            <a href="./challenges/single-price-grid-component-master/single-price.html">single-price html</a>
+            <div><a href="./challenges/single-price-grid-component-master/themes/single-price.css">single-price css</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
     </div>
     <div class="table-row">
         <div class="table-cell">
-            <a href="../src/themes/selflandin.css">selfpage css</a>
-            <div><a href="../src/selflanding.html">selfpage html</a></div>
+            <a href=""></a>
+            <div><a href=""></a></div>
             </div>
         <div class="table-cell">
-            <a href="../challenges/huddle-landing-page-with-alternating-feature-blocks-master/huddle block.html">huddle-page html</a>
-            <div><a href="../challenges/huddle-landing-page-with-alternating-feature-blocks-master/themes/huddle block.css">huddle-page css</a>
+            <a href="./challenges/huddle-landing-page-with-alternating-feature-blocks-master/huddle block.html">huddle-page html</a>
+            <div><a href="./challenges/huddle-landing-page-with-alternating-feature-blocks-master/themes/huddle block.css">huddle-page css</a>
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -342,8 +342,8 @@
                 <a href=""></a>
                 </div>
             <div class="table-cell">
-                <a href="../challenges/chat-app-css-illustration-master/themes/chat app.css">chat app css</a>
-                <div><a href="../challenges/chat-app-css-illustration-master/chat app.html">chat app html </a>
+                <a href="./challenges/chat-app-css-illustration-master/themes/chat app.css">chat app css</a>
+                <div><a href="./challenges/chat-app-css-illustration-master/chat app.html">chat app html </a>
                 </div>
              </div> <div class="table-cell last-cell">
                 <a href=""></a>
@@ -354,8 +354,8 @@
             <a href=""></a>
             </div>
         <div class="table-cell">
-            <a href="../challenges/huddle-landing-page-with-single-introductory-section-master/themes/Huddle single.css">huddle single css</a>
-            <div><a href="../challenges/huddle-landing-page-with-single-introductory-section-master/Huddle single.html">huddle single html </a>
+            <a href="./challenges/huddle-landing-page-with-single-introductory-section-master/themes/Huddle single.css">huddle single css</a>
+            <div><a href="./challenges/huddle-landing-page-with-single-introductory-section-master/Huddle single.html">huddle single html </a>
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
