--- a/selflanding.html
+++ b/selflanding.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>selflanding</title>
-    <link rel="stylesheet" href="./themes/selflanding.css">
+    <link rel="stylesheet" href="./theme/selflanding.css">
 </head>
 <body>
     <div class="main">
