--- a/challenges/chat-app-css-illustration-master/chat app.html
+++ b/challenges/chat-app-css-illustration-master/chat app.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
-    <link rel="stylesheet" href="./themes/chat app.css" />
+    <link rel="stylesheet" href="./theme/chat app.css" />
     <title>chat app</title>
   </head>
   <body>
