--- a/challenges/fylo-data-storage-component-master/fylo.html
+++ b/challenges/fylo-data-storage-component-master/fylo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./themes/fylo.css" />
+    <link rel="stylesheet" href="./theme/fylo.css" />
     <title>Fylo data storage component</title>
   </head>
   <body>
