--- a/challenges/huddle-landing-page-with-single-introductory-section-master/Huddle single.html
+++ b/challenges/huddle-landing-page-with-single-introductory-section-master/Huddle single.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>huddle single</title>
-    <link rel="stylesheet" href="./themes/Huddle single.css" />
+    <link rel="stylesheet" href="./theme/Huddle single.css" />
     <link
       ret="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
