--- a/challenges/social-proof-section-master/social-proof.html
+++ b/challenges/social-proof-section-master/social-proof.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./themes/social-proof.css" />
+    <link rel="stylesheet" href="./theme/social-proof.css" />
     <title>Social proof section</title>
   </head>
   <body>
