--- a/challenges/3-column-preview-card-component-main/3-column-preview.html
+++ b/challenges/3-column-preview-card-component-main/3-column-preview.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./themes/3-column-preview.css" />
+    <link rel="stylesheet" href="./theme/3-column-preview.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
