--- a/challenges/clipboard-landing-page-master/clipboard.html
+++ b/challenges/clipboard-landing-page-master/clipboard.html
@@ -9,7 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     />
 
-    <link rel="stylesheet" href="./themes/clipboard.css" />
+    <link rel="stylesheet" href="./theme/clipboard.css" />
   </head>
   <body>
     <header>
