--- a/challenges/nft-preview-card-component-main/NFT.html
+++ b/challenges/nft-preview-card-component-main/NFT.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./themes/NFT.css" />
+    <link rel="stylesheet" href="./theme/NFT.css" />
     <title>Frontend Mentor | NFT preview card component</title>
   </head>
   <body>
