--- a/challenges/qr-code-component-main/QR code.html
+++ b/challenges/qr-code-component-main/QR code.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./themes/QR code.css" />
+    <link rel="stylesheet" href="./theme/QR code.css" />
 
     <title>QR code component</title>
   </head>
