--- a/challenges/single-price-grid-component-master/single-price.html
+++ b/challenges/single-price-grid-component-master/single-price.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./themes/single-price.css" />
+    <link rel="stylesheet" href="./theme/single-price.css" />
     <title>Single Price Grid Component</title>
   </head>
   <body>
