--- a/selflanding.html
+++ b/selflanding.html
@@ -28,7 +28,6 @@
             <a href="./src/a.html">a</a>
         </div>
         <div class="table-cell">
-            <a href="./src/csslessons.html/animation.css">animation css</a>
             <div> <a href="./src/csslessons.html/animation.html">animation html</a></div>
         </div> <div class="table-cell last-cell">
             <a href="https://js-basic-lessons-fawn.vercel.app/src/tip-calculator-app-main/tip%20calculator.html">tip calculator html</a>
@@ -39,7 +38,6 @@
             <a href="./src/pagea.html">pagea</a>
         </div>
         <div class="table-cell">
-            <a href="./src/csslessons.html/background.css">background css</a>
             <div>  <a href="./src/csslessons.html/animation.css">background html</a></div>
         </div> <div class="table-cell last-cell">
             <a href="https://js-basic-lessons-fawn.vercel.app/src/tip-calculator-app-main/tip%20calculator.css">tip calculator css</a>
@@ -50,8 +48,7 @@
             <a href="./src/login.html">login</a>
         </div>
         <div class="table-cell">
-            <a href="./src/csslessons.html/Boxmodel.css">Boxmodel css</a>
-            <div><a href="./src/csslessons.html/Boxmodel.css">Boxmodel css</a></div>
+            <div><a href="./src/csslessons.html/background.html">Boxmodel html</a></div>
         </div> <div class="table-cell last-cell">
             <a href="https://js-basic-lessons-fawn.vercel.app/src/tip-calculator-app-main/tip%20calculator.js">tip calculator js</a>
         </div>
@@ -61,7 +58,6 @@
             <a href="./src/pagec.html">pagec</a>
         </div>
         <div class="table-cell">
-            <a href="./src/csslessons.html/formating.css">formating css</a>
             <div><a href="./src/csslessons.html/formating.html">formating html</a></div>
         </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -182,7 +178,6 @@
             <a href="./src/input type 3.html">input type3</a>
         </div>
         <div class="table-cell">
-            <a href="./src/csslessons.html/animation.css">animation css</a>
             <div> <a href="./src/csslessons.html/animation.html">animation html</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -193,7 +188,6 @@
             <a href="./src/input type2.html">sinput type2</a>
         </div>
         <div class="table-cell">
-            <a href="./challenges/qr-code-component-main/Themes/QR code.css">QRcode css</a>
             <div><a href="./challenges/qr-code-component-main/QR code.html">QRcode html</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -204,8 +198,9 @@
             <a href="./src/Input Types.html">input Types</a>
         </div>
         <div class="table-cell">
-            <a href="./challenges/order-summary-component-main/order-summary.html">Order-summary html</a>
-            <div><a href="./challenges/order-summary-component-main/theme/Order-summary.css">Order-summary css</a></div>
+            <div>
+                <a href="./challenges/order-summary-component-main/order-summary.html">Order-summary html</a>
+            </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
@@ -215,7 +210,6 @@
             <a href="./src/link_a_target.html">link_a_target</a>
         </div>
         <div class="table-cell">
-            <a href="./challenges/testimonials-grid-section-main/theme/Tm-grid.css">Tm-grid css</a>
            <div> <a href="./challenges/testimonials-grid-section-main/Tm-grid.html">Tm-grid html</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -226,7 +220,6 @@
             <a href="./src/linkb_parent.html">linkb_parent</a>
         </div>
         <div class="table-cell">
-            <a href="./challenges/profile-card-component-main/theme/profile-card.css">profile css</a>
             <div> <a href="./challenges/profile-card-component-main/profile-card.html">profile html</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -237,8 +230,7 @@
             <a href="./src/input type4.html">input type4</a>
         </div>
         <div class="table-cell">
-            <a href="./challenges/fylo-data-storage-component-master/fylo.html">fylo html</a>
-            <div><a href="./challenges/fylo-data-storage-component-master/theme/fylo.css">fylo css</a>
+            <div> <a href="./challenges/fylo-data-storage-component-master/fylo.html">fylo html</a>
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -250,7 +242,6 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/3-column-preview-card-component-main/3-column-preview.html">3-column-preview  html</a>
-            <div><a href="./challenges/3-column-preview-card-component-main/theme/3-column-preview.css">3-column-preview css</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
@@ -261,7 +252,6 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/nft-preview-card-component-main/NFT.html">nft html</a>
-            <div>  <a href="./challenges/nft-preview-card-component-main/theme/NFT.css">nft css</a></div> 
             </div><div class="table-cell last-cell">
                 <a href=""></a>
         </div>
@@ -271,8 +261,7 @@
             <a href="./src/localstore.html">localstore</a>
         </div>
         <div class="table-cell">
-            <a href="./challenges/stats-preview-card-component-main/sts-card.html">status-preview html</a>
-            <div><a href="./challenges/stats-preview-card-component-main/theme/sts-card.css">status-preview css</a>
+             <div><a href="./challenges/stats-preview-card-component-main/sts-card.html">status-preview html</a>
             </div> 
             </div><div class="table-cell last-cell">
                 <a href=""></a>
@@ -283,8 +272,8 @@
             <a href="./src/DOM.html">Dom</a>
         </div>
         <div class="table-cell">
-            <a href="./challenges/clipboard-landing-page-master/clipboard.html">clipboard.html</a>
-            <div> <a href="./challenges/clipboard-landing-page-master/theme/clipboard.css">clipboard css</a>
+             <div><a href="./challenges/clipboard-landing-page-master/clipboard.html">clipboard.html</a>
+
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -295,8 +284,7 @@
             <a href="./src/read only.html">read only</a>
         </div>
         <div class="table-cell">
-            <a href="./challenges/four-card-feature-section-master/four-card.html">four-card html</a>
-            <div><a href="./challenges/four-card-feature-section-master/theme/four-card.css">four-card css</a>
+            <div><a href="./challenges/four-card-feature-section-master/four-card.html">four-card html</a>
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -307,8 +295,7 @@
             <a href="./about-me.html">about-me.html</a>
         </div>
         <div class="table-cell">
-            <a href="./challenges/social-proof-section-master/social-proof.html">social-proof html</a>
-            <div><a href="./challenges/social-proof-section-master/theme/social-proof.css">social-proof css</a></div>
+            <div><a href="./challenges/social-proof-section-master/social-proof.html">social-proof html</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
@@ -319,7 +306,6 @@
         </div>
         <div class="table-cell">
             <a href="./challenges/single-price-grid-component-master/single-price.html">single-price html</a>
-            <div><a href="./challenges/single-price-grid-component-master/theme/single-price.css">single-price css</a></div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
         </div>
@@ -330,8 +316,8 @@
             <div><a href=""></a></div>
             </div>
         <div class="table-cell">
-            <a href="./challenges/huddle-landing-page-with-alternating-feature-blocks-master/huddle block.html">huddle-page html</a>
-            <div><a href="./challenges/huddle-landing-page-with-alternating-feature-blocks-master/theme/huddle block.css">huddle-page css</a>
+             <div><a href="./challenges/huddle-landing-page-with-alternating-feature-blocks-master/huddle block.html">huddle-page html</a>
+
             </div>
          </div> <div class="table-cell last-cell">
             <a href=""></a>
@@ -342,7 +328,6 @@
                 <a href=""></a>
                 </div>
             <div class="table-cell">
-                <a href="./challenges/chat-app-css-illustration-master/theme/chat app.css">chat app css</a>
                 <div><a href="./challenges/chat-app-css-illustration-master/chat app.html">chat app html </a>
                 </div>
              </div> <div class="table-cell last-cell">
@@ -354,7 +339,6 @@
             <a href=""></a>
             </div>
         <div class="table-cell">
-            <a href="./challenges/huddle-landing-page-with-single-introductory-section-master/theme/Huddle single.css">huddle single css</a>
             <div><a href="./challenges/huddle-landing-page-with-single-introductory-section-master/Huddle single.html">huddle single html </a>
             </div>
          </div> <div class="table-cell last-cell">
