--- a/selflanding.html
+++ b/selflanding.html
@@ -40,7 +40,7 @@
         <div class="table-cell">
             <div>  <a href="./src/csslessons.html/background.html">background html</a></div>
         </div> <div class="table-cell last-cell">
-            <a href="https://js-basic-lessons-fawn.vercel.app/src/tip-calculator-app-main/tip%20calculator.css">tip calculator css</a>
+            <a href="https://js-basic-lessons-fawn.vercel.app/challenges/article-preview-component-master/artical.html">artical html</a>
         </div>
     </div>
     <div class="table-row">
@@ -50,7 +50,7 @@
         <div class="table-cell">
             <div><a href="./src/csslessons.html/background.html">Boxmodel html</a></div>
         </div> <div class="table-cell last-cell">
-            <a href="https://js-basic-lessons-fawn.vercel.app/src/tip-calculator-app-main/tip%20calculator.js">tip calculator js</a>
+            <a href="https://js-basic-lessons-fawn.vercel.app/challenges/calculator-app-main/calc.html">calc html</a>
         </div>
     </div>
     <div class="table-row">
@@ -60,7 +60,7 @@
         <div class="table-cell">
             <div><a href="./src/csslessons.html/formating.html">formating html</a></div>
         </div> <div class="table-cell last-cell">
-            <a href=""></a>
+            <a href="https://js-basic-lessons-fawn.vercel.app/challenges/ecommerce-product-page-main/ecomers.html">ecomers html</a>
         </div>
     </div>
     <div class="table-row">
@@ -70,7 +70,7 @@
         <div class="table-cell">
             <a href="./src/csslessons.html/link.html">link</a>
         </div> <div class="table-cell last-cell">
-            <a href=""></a>
+            <a href="https://js-basic-lessons-fawn.vercel.app/challenges/interactive-pricing-component-main/interactive.html">interactive html</a>
         </div>
     </div>
     <div class="table-row">
@@ -80,7 +80,7 @@
         <div class="table-cell">
             <a href="./src/csslessons.html/link2.html">link2</a>
         </div> <div class="table-cell last-cell">
-            <a href=""></a>
+            <a href="https://js-basic-lessons-fawn.vercel.app/challenges/pricing-component-with-toggle-master/pricing.html">pricing html</a>
         </div>
     </div>
     <div class="table-row">
@@ -90,7 +90,7 @@
         <div class="table-cell">
             <a href="./src/csslessons.html/page1.html">page1</a>
         </div> <div class="table-cell last-cell">
-            <a href=""></a>
+            <a href="https://js-basic-lessons-fawn.vercel.app/challenges/faq-accordion-card-main/FAQ.html">faq html</a>
         </div>
     </div>
     <div class="table-row">
@@ -100,7 +100,7 @@
         <div class="table-cell">
             <a href="./src/csslessons.html/page2.html">page2</a>
         </div> <div class="table-cell last-cell">
-            <a href=""></a>
+            <a href="https://js-basic-lessons-fawn.vercel.app/challenges/time-tracking-dashboard-main/time%20traking.html">app track html</a>
         </div>
     </div>
     <div class="table-row">
