--- a/Tasks/frontpage.html
+++ b/Tasks/frontpage.html
@@ -10,6 +10,7 @@
       integrity="sha384-/frq1SRXYH/bSyou/HUp/hib7RVN1TawQYja658FEOodR/FQBKVqT9Ol+Oz3Olq5"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> 
     <script
       src="https://kit.fontawesome.com/yourcode.js"
       crossorigin="anonymous"
@@ -29,63 +30,58 @@
         </div>
         <div>
           <div class="icons">
-            <i class="fa fa-circle-o-notch"></i>
+            <i class="fa fa-clock-o"></i>
           </div>
           <div class="icons">
-            <i class="fa fa-wallet"></i>
+            <i class="material-symbols-outlined">
+              folder
+            </i>
           </div>
           <div class="icons">
-            <i style="font-size: 20px" class="fas">&#xf06d;</i>
+            <i class="fas">&#xf06d;</i>
           </div>
           <div class="icons">
-            <i style="font-size: 20px" class="fas">&#xf4c0;</i>
+            <i class="fa fa-briefcase"></i>
+            <span class="dot1"></span>
           </div>
           <div class="icons">
             <i class="fa-regular fa-envelope"></i>
+            <span class="dot2"></span>
           </div>
           <div class="icons">
-            <i class="fa-solid fa-ranking-star"></i>
+            <i class="material-symbols-outlined">
+              leaderboard
+            </i>
           </div>
           <div class="icons">
-            <i style="font-size: 20px" class="fas">&#xf508;</i>
+            <i class="far fa-user-circle"></i>
           </div>
         </div>
         <div class="image">
           <div>
-            <img
-              class="images"
-              src="https://images.unsplash.com/photo-1529665253569-6d01c0eaf7b6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8cHJvZmlsZXxlbnwwfHwwfHw%3D&w=1000&q=80"
-              alt="image1"
-            />
+            <img class="images" src="../images/neymar2.jpg" alt="image1" />
           </div>
           <div>
-            <img
-              class="images"
-              src="https://images.unsplash.com/photo-1594751543129-6701ad444259?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8ZGFyayUyMHByb2ZpbGV8ZW58MHx8MHx8&w=1000&q=80"
-              alt="image2"
-            />
+            <img class="images" src="../images/neymar1.jpg" alt="image2" />
+            <span class="dot4"></span>
           </div>
           <div>
-            <img
-              class="images"
-              src="https://images.unsplash.com/photo-1474978528675-4a50a4508dc3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTZ8fHByb2ZpbGV8ZW58MHx8MHx8&w=1000&q=80"
-              alt="image3"
-            />
+            <img class="images" src="../images/sanj.jpg" alt="image3" />
           </div>
         </div>
-        <div id="power">
+        <div class="power">
           <i class="fa fa-power-off"></i>
         </div>
       </section>
       <section class="container2">
         <div class="top-heading">
-          <h2>Quick Stats & Actions</h2>
+          <h3>Quick Stats & Actions</h3>
         </div>
         <div class="headings">
           <h3>Bitcoin</h3>
           <div class="liveprice">
-            <div id="heading">current Price</div>
-            <p>$10,197.30</p>
+            <div class="heading1">Current Price</div>
+            <div class="liveprice1">$10,197.30</div id="liveprice">
             <div class="decreasing-price">-1.71% <span>this week</span></div>
           </div>
         </div>
@@ -98,87 +94,70 @@
             <div class="menu1">
               <i
                 class="fas fa-hand-holding-usd"
-                style="font-size: 30px; color: lightgreen"
               ></i>
-
               <p>Bank AC</p>
             </div>
             <div class="menu1">
               <i
                 class="fas fa-laptop"
-                style="font-size: 30px; color: orange"
               ></i>
               <p>Top Up</p>
             </div>
             <div class="menu1">
               <i
                 class="far fa-building"
-                style="font-size: 30px; color: rgb(114, 114, 240)"
               ></i>
-
               <p>Find ATM</p>
             </div>
             <div class="menu1">
               <i
                 class="fa fa-bank"
-                style="font-size: 30px; color: lightseagreen"
               ></i>
               <p>Bank AC</p>
             </div>
             <div class="menu1">
               <i
                 class="fas fa-columns"
-                style="font-size: 30px; color: violet"
               ></i>
-
               <p>Bank AC</p>
             </div>
             <div class="menu1">
-              <i class="fas fa-book" style="font-size: 30px; color: orange"></i>
+              <i class="fas fa-book" ></i>
               <p>Transfer</p>
             </div>
             <div class="menu1">
               <i
                 class="fas fa-credit-card"
-                style="font-size: 30px; color: lightblue"
               ></i>
-
               <p>Cards</p>
             </div>
             <div class="menu1">
               <i
                 class="far fa-money-bill-alt"
-                style="font-size: 30px; color: red"
               ></i>
               <p>Pay Bill</p>
             </div>
             <div class="menu1">
               <i
                 class="fas fa-money-bill"
-                style="font-size: 30px; color: red"
               ></i>
-
               <p>Payment</p>
             </div>
             <div class="menu1">
               <i
-                class="fab fa-cc-amazon-pay"
-                style="font-size: 30px; color: blue"
+                class="fab fa-amazon-pay"
               ></i>
-
               <p>Bank AC</p>
             </div>
             <div class="menu1">
               <i
                 class="fas fa-donate"
-                style="font-size: 30px; color: lightpink"
               ></i>
               <p>Withdraw</p>
             </div>
             <div class="menu1">
               <i
                 class="fas fa-tags"
-                style="font-size: 30px; color: lightskyblue"
               ></i>
               <p>Voucher</p>
             </div>
@@ -187,17 +166,17 @@
       </section>
       <section class="container3">
         <div class="top-heading2">
-          <h2>History & Activity</h2>
+          <h3>History & Activity</h3>
         </div>
         <div class="wallet">
           <p>Current Balance</p>
           <div class="price1">
             <div>
-              <i class="fa fa-wallet" style="font-size: 30px; color: blue">
-                <span>$3,102.48</span>
+              <i class="fa fa-wallet">
+                <span class="price2">$3,102.48</span>
               </i>
             </div>
-            <div class="options">
+            <div >
               <select class="options">
                 <option value="USD" selected="selected">USD</option>
                 <option value="EUR">EUR</option>
@@ -205,43 +184,37 @@
                 <option value="DZD">DZD</option>
                 <option value="ARP">ARP</option>
                 <option value="AUD">AUD</option>
-                <option value="ATS">ATS</option>
-                <option value="BSD">BSD</option>
               </select>
             </div>
           </div>
         </div>
         <div class="activity">
-          <h3 class="heading">Recent Activity</h3>
+          <h3>Recent Activity</h3>
           <p>Filter by:</p>
           <div class="options2">
             <select class="options1">
               <option value="Sent" selected="selected">Sent</option>
-              <option value=""></option>
-              <option value=""></option>
-              <option value=""></option>
+              <option value="">Sent1</option>
+              <option value="">Sent2</option>
+              <option value="">Sent3</option>
             </select>
             <select class="options1">
               <option value="Currency" selected="selected">Currency</option>
-              <option value="EUR"></option>
-              <option value="GBP"></option>
-              <option value="DZD"></option>
+              <option value="EUR">EUR</option>
+              <option value="GBP">GBP</option>
+              <option value="DZD">DZD</option>
             </select>
             <select class="options1">
               <option value="all" selected="selected">All level</option>
-              <option value="EUR"></option>
-              <option value="GBP"></option>
-              <option value="DZD"></option>
+              <option value="">Level1</option>
+              <option value="">Level2</option>
+              <option value="">Level3</option>
             </select>
           </div>
           <section class="card">
             <div class="col1">
               <div class="logo-img">
-                <i
-                  class="fab fa-bandcamp"
-                  style="font-size: 30px; color: lightblue"
-                ></i>
-
+                <img src="../images/logo1.png" alt="logo1" />
                 <div>
                   <span>Cameron B.</span>
                   <div class="btc">BTC</div>
@@ -253,26 +226,23 @@
             </div>
             <div class="col2">
               <div>
-                <i class="fa fa-clock" style="color: lightgray"></i
+                <i class="fa fa-clock" class="clock" ></i
                 ><span>2days ago</span>
                 <div>
-                  <i class="fa fa-star" style="color: lightgray"></i
+                  <i class="far fa-star" ></i
                   ><span>4,4(1,420rating)</span>
                 </div>
               </div>
 
               <div>
-                <button type="button" class="button1">Details</button>
+                <button type="button" class="button">Details</button>
               </div>
             </div>
           </section>
           <section class="card">
             <div class="col1">
               <div class="logo-img">
-                <i
-                  class="fab fa-cloudscale"
-                  style="font-size: 30px; color: lightblue"
-                ></i>
+                <img src="../images/logo2.png" alt="logo2" />
 
                 <div>
                   <span>Jane C.</span>
@@ -285,10 +255,10 @@
             </div>
             <div class="col2">
               <div>
-                <i class="fa fa-clock" style="color: lightgray"></i
+                <i class="fa fa-clock" class="clock"></i
                 ><span>4 days ago</span>
                 <div>
-                  <i class="fa fa-star" style="color: lightgray"></i
+                  <i class="far fa-star" ></i
                   ><span>4,3(1,223rating)</span>
                 </div>
               </div>
@@ -301,10 +271,7 @@
           <section class="card">
             <div class="col1">
               <div class="logo-img">
-                <i
-                  class="fab fa-centercode"
-                  style="font-size: 30px; color: lightblue"
-                ></i>
+                <img src="../images/logo3.png" alt="logo3" />
 
                 <div>
                   <span>Jenny W.</span>
@@ -312,15 +279,15 @@
                 </div>
               </div>
               <div>
-                <p>0.001 <span>BTC</span></p>
+                <p>0.001 <span class="btc">BTC</span></p>
               </div>
             </div>
             <div class="col2">
               <div>
-                <i class="fa fa-clock" style="color: lightgray"></i
+                <i  class="fa fa-clock" ></i
                 ><span>13 days ago</span>
                 <div>
-                  <i class="fa fa-star" style="color: lightgray"></i
+                  <i class="far fa-star" ></i
                   ><span>3,8(879rating)</span>
                 </div>
               </div>
@@ -334,31 +301,29 @@
           <p class="heading">History</p>
         </div>
         <div class="history">
-          <div id="card">
+          <div class="his-card">
             <div class="history1">
-              <div>
-                <p>BTCB/USD</p>
-                <p>$10,170 3452</p>
+              <div class="history-col">
+                <div class="btc1">BTCB/USD</div>
+                <div class="doller">$10,170 3452</div>
               </div>
               <div>
-                <button type="button" id="button">..</button>
+                <button type="button" class="button-col">..</button>
               </div>
             </div>
             <div class="graph2">
               <img src="../images/grap2.png" alt="graph2" />
-            </div>
+            </div>  
           </div>
         </div>
       </section>
       <section class="container4">
         <div class="nav">
-          <img src="../images/settings.png" alt="setting" />
-          <img src="../images/bell.png" alt=" bell" />
-
+          <i class="fa fa-gear"></i>
+          <i class='far fa-bell'><span class="dot3"></span></i>
           <div class="search-container">
             <i
               class="fa fa-search"
-              style="font-size: 20px; color: lightgray"
             ></i>
 
             <input type="text" placeholder="Search Dashboard" name="search" />
@@ -366,21 +331,21 @@
           <i class="fas fa-sliders-h" style="font-size: 20px; color: black"></i>
 
           <div class="profile">
-            <img src="../images/sanj.jpg" alt="profile" />
+            <img src="../images/neymar4.jpg" alt="profile" />
           </div>
         </div>
-        <div id="container4">
+        <div class="container5">
           <div class="col3">
             <div>
-              <div id="image">
-                <img src="../images/b.png" alt="logo3" /><span>Bitcoin</span
-                ><span style="color: lightgray">BTC</span>
+              <div class="image-bit">
+                <img src="../images/b.png" alt="logo3" /><div class="bitcoin">Bitcoin <span >BTC</span></div
+                >
               </div>
-              <div>
-                <p style="font-weight: bold">
+              <div class="doller2">
+                <div  class="doller2">
                   $57,660.35
-                  <span style="color: lightgreen"><sub>+2.84%</sub></span>
-                </p>
+                  <span ><sub>+2.84%</sub></span>
+                </div>
               </div>
             </div>
             <div class="currency">
@@ -391,17 +356,17 @@
               <button type="button">All</button>
             </div>
           </div>
-          <div id="graph">
+          <div class="graph3">
             <img src="../images/graph3.png" alt="graph img" />
           </div>
           <div>
-            <p class="heading">Recent Activity</p>
+            <p class="heading2">Recent Activity</p>
           </div>
           <section class="cards">
             <section class="card1">
               <div class="card-row1">
                 <div>Extra Spending</div>
-                <div style="font-size: large; font-weight: 600">
+                <div class="sup">
                   <sup>$</sup>8,790
                 </div>
                 <div>Compare To Last Month</div>
@@ -411,15 +376,15 @@
               </div>
               <div class="card-row2">
                 <button type="button" class="button2"></button
-                ><span>This Month $2,450</span>
+                ><span class="btn-spn">This Month $2,450</span>
                 <button type="button" class="button3"></button
-                ><span>March $2,040</span>
+                ><span class="btn-spn">March $2,040</span>
               </div>
             </section>
             <section class="card2">
               <div class="card-row1">
                 <div>Extra Spending</div>
-                <div style="font-size: large; font-weight: 600">
+                <div  class="sup">
                   <sup>$</sup>8,790
                 </div>
                 <div>Compare To Last Month</div>
@@ -429,9 +394,9 @@
               </div>
               <div class="card-row2">
                 <button type="button" class="button2"></button
-                ><span>This Month $2,450</span>
+                ><span class="btn-spn">This Month $2,450</span>
                 <button type="button" class="button3"></button
-                ><span>March $2,040</span>
+                ><span class="btn-spn">March $2,040</span>
               </div>
             </section>
             <section class="card3">
